# FineChuningVGG16

./: .gitignore  README.md  fine_chuning_vgg16.py  pyproject.toml  requirements.txt
