[tool.poetry]
name = "finechuning"
version = "0.1.0"
description = ""
authors = ["Komesu YU <e215742@ie.u-ryukyu.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "1.24.3"
opencv-python = "^4.8.0.74"
tensorflow = "2.13.0"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
